[gd_scene load_steps=26 format=3 uid="uid://dc3ntad11u0qu"]

[ext_resource type="Script" path="res://scripts/nodes/options_layer.gd" id="1_cahn6"]
[ext_resource type="Material" uid="uid://cqn5rkmj7io2i" path="res://shaders/panel_shader_material.tres" id="2_4i7gj"]
[ext_resource type="Script" path="res://scripts/nodes/SwitchButton.gd" id="3_uq6y0"]
[ext_resource type="AudioStream" uid="uid://bdg6rdgg5xxrc" path="res://audio/sfx/Upsilon.ogg" id="4_5hsqm"]
[ext_resource type="Texture2D" uid="uid://d1q6ski8nlaho" path="res://images/touchscreen_controls/Tap.png" id="4_fo16v"]
[ext_resource type="Texture2D" uid="uid://b03xoie8yvxyd" path="res://images/touchscreen_controls/Tap_Pressed.png" id="5_s46va"]
[ext_resource type="Texture2D" uid="uid://g308f5suvywb" path="res://images/touchscreen_controls/Swipe.png" id="5_ts1gr"]
[ext_resource type="Texture2D" uid="uid://b6dk5btlcfrre" path="res://images/touchscreen_controls/Tap_Focus.png" id="6_bfxs0"]
[ext_resource type="Texture2D" uid="uid://bsk63y3k0w8kw" path="res://images/touchscreen_controls/VirtualButtons.png" id="6_pcisq"]
[ext_resource type="Texture2D" uid="uid://ha8cngh130pe" path="res://images/touchscreen_controls/Tap_Hover.png" id="6_qbjox"]
[ext_resource type="Texture2D" uid="uid://0l1lf78avopb" path="res://images/touchscreen_controls/Tap_Disable.png" id="7_jat2b"]
[ext_resource type="Texture2D" uid="uid://cpkxs840jg1a4" path="res://images/touchscreen_controls/Swipe_Pressed.png" id="8_8b5bw"]
[ext_resource type="Texture2D" uid="uid://o1r8kfbx74yx" path="res://images/touchscreen_controls/Swipe_Focus.png" id="9_tbmhw"]
[ext_resource type="Texture2D" uid="uid://dbye23w4a1vp4" path="res://images/touchscreen_controls/VirtualButtons_Pressed.png" id="11_ysk3p"]
[ext_resource type="Texture2D" uid="uid://bepg7lvcbsdjh" path="res://images/touchscreen_controls/Swipe_Hover.png" id="11_yxxnk"]
[ext_resource type="Texture2D" uid="uid://dkfj8c4oqihum" path="res://images/touchscreen_controls/VirtualButtons_Focus.png" id="12_dslu1"]
[ext_resource type="Texture2D" uid="uid://dp8j3be6ryho6" path="res://images/touchscreen_controls/Swipe_Disable.png" id="12_o58bl"]
[ext_resource type="Texture2D" uid="uid://6pndjir8go15" path="res://images/touchscreen_controls/VirtualButtons_Hover.png" id="16_0xix8"]
[ext_resource type="Texture2D" uid="uid://74xypfu5iawx" path="res://images/touchscreen_controls/VirtualButtons_Disable.png" id="17_jrv5o"]
[ext_resource type="Script" path="res://scripts/nodes/KeybindButton.gd" id="19_7a5jm"]

[sub_resource type="LabelSettings" id="LabelSettings_rskjs"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_44h5e"]
font_size = 14
font_color = Color(1, 0.745098, 0, 1)

[sub_resource type="Gradient" id="Gradient_tecms"]
interpolation_mode = 2
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.524887, 1)
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ausc"]
gradient = SubResource("Gradient_tecms")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyy0l"]

[node name="OptionsLayer" type="CanvasLayer"]
script = ExtResource("1_cahn6")

[node name="TabContainer" type="TabContainer" parent="."]
material = ExtResource("2_4i7gj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
tab_alignment = 1

[node name="Grafika" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Grafika"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.5
offset_top = -187.0
offset_right = 308.5
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" type="VBoxContainer" parent="TabContainer/Grafika/VBoxContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="TabContainer/Grafika/VBoxContainer/Screen"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Pełny ekran:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="FullScreenButton" type="Button" parent="TabContainer/Grafika/VBoxContainer/Screen"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
text = "Wyłączony"
script = ExtResource("3_uq6y0")

[node name="FullScreenLabelDesc" type="Label" parent="TabContainer/Grafika/VBoxContainer/Screen"]
visible = false
layout_mode = 2
text = "Ustawienia pełnego ekranu są niedostępne na platformie Android"
label_settings = SubResource("LabelSettings_rskjs")
horizontal_alignment = 1

[node name="Screen2" type="VBoxContainer" parent="TabContainer/Grafika/VBoxContainer"]
layout_mode = 2

[node name="GraphicsAPILabel" type="Label" parent="TabContainer/Grafika/VBoxContainer/Screen2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "API graficzne:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GraphicsAPIButton" type="OptionButton" parent="TabContainer/Grafika/VBoxContainer/Screen2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Vulkan"
popup/item_0/id = 0
popup/item_1/text = "OpenGL"
popup/item_1/id = 1

[node name="GraphicsAPIRestartLabel" type="Label" parent="TabContainer/Grafika/VBoxContainer/Screen2"]
visible = false
layout_mode = 2
text = "Zmiana tego ustawienia wymaga restartu gry"
label_settings = SubResource("LabelSettings_44h5e")
horizontal_alignment = 1

[node name="UIScaling" type="VBoxContainer" parent="TabContainer/Grafika/VBoxContainer"]
layout_mode = 2

[node name="UIScalingLabel" type="Label" parent="TabContainer/Grafika/VBoxContainer/UIScaling"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Skalowanie UI:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Container" type="Control" parent="TabContainer/Grafika/VBoxContainer/UIScaling"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/Grafika/VBoxContainer/UIScaling/Container"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_8ausc")

[node name="UIScalingSlider" type="HSlider" parent="TabContainer/Grafika/VBoxContainer/UIScaling/Container/TextureRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxEmpty_pyy0l")
min_value = 0.7
max_value = 1.3
step = 0.1
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="Label" type="Label" parent="TabContainer/Grafika/VBoxContainer/UIScaling/Container/TextureRect/UIScalingSlider"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
offset_left = -8.0
offset_right = 24.0
offset_bottom = 50.0
text = "0.7x"
vertical_alignment = 2

[node name="Label2" type="Label" parent="TabContainer/Grafika/VBoxContainer/UIScaling/Container/TextureRect/UIScalingSlider"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 50.0
grow_horizontal = 2
text = "1.0x"
vertical_alignment = 2

[node name="Label3" type="Label" parent="TabContainer/Grafika/VBoxContainer/UIScaling/Container/TextureRect/UIScalingSlider"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_right = 13.0
offset_bottom = 50.0
grow_horizontal = 0
text = "1.3x*"
vertical_alignment = 2

[node name="UIScalingLabel2" type="Label" parent="TabContainer/Grafika/VBoxContainer/UIScaling"]
layout_mode = 2
text = "*Może spowodować że część elementów interfejsu zostanie umieszczona poza ekranem"
label_settings = SubResource("LabelSettings_rskjs")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Audio" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -144.0
offset_right = 300.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterSliderLabel" type="Label" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Główny"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXSliderLabel" type="Label" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Efekty dźwiękowe"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicSliderLabel" type="Label" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Muzyka"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Rozgrywka" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Rozgrywka"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -265.0
offset_right = 380.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="TouchScreenControls" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls"]
layout_mode = 2
text = "Sposób sterowania dotykowego:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Tap" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Tap"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_fo16v")
texture_pressed = ExtResource("5_s46va")
texture_hover = ExtResource("6_qbjox")
texture_disabled = ExtResource("7_jat2b")
texture_focused = ExtResource("6_bfxs0")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Tap"]
layout_mode = 2
text = "Dotknij"
horizontal_alignment = 1

[node name="Swipe" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Swipe"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_ts1gr")
texture_pressed = ExtResource("8_8b5bw")
texture_hover = ExtResource("11_yxxnk")
texture_disabled = ExtResource("12_o58bl")
texture_focused = ExtResource("9_tbmhw")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Swipe"]
layout_mode = 2
text = "Przewiń"
horizontal_alignment = 1

[node name="VirtualButtons" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/VirtualButtons"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_pcisq")
texture_pressed = ExtResource("11_ysk3p")
texture_hover = ExtResource("16_0xix8")
texture_disabled = ExtResource("17_jrv5o")
texture_focused = ExtResource("12_dslu1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/VirtualButtons"]
layout_mode = 2
text = "Wirtualne przyciski"
vertical_alignment = 1

[node name="Keybindings" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Klawiszologia:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings"]
layout_mode = 2
alignment = 1

[node name="Keyboard" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Klawiatura"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Up" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Up"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Góra"

[node name="KBUpButton" type="Button" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Up"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "W"
script = ExtResource("19_7a5jm")
action = "move_up"

[node name="Down" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Down"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Dół"

[node name="KBDownButton" type="Button" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Down"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "S"
script = ExtResource("19_7a5jm")
action = "move_down"

[node name="Controller" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Kontroler"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Up" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Up"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Góra"

[node name="Label2" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Up"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "JoyUp"

[node name="Label3" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Up"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "DpadUp"

[node name="Down" type="HBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Down"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Dół"

[node name="Label2" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Down"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "JoyDown"

[node name="Label3" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Controller/Down"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "DpadDown"

[node name="DevConsole" type="VBoxContainer" parent="TabContainer/Rozgrywka/VBoxContainer"]
layout_mode = 2

[node name="DevConsoleLabel" type="Label" parent="TabContainer/Rozgrywka/VBoxContainer/DevConsole"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Konsola deweloperska:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="DevConsoleButton" type="Button" parent="TabContainer/Rozgrywka/VBoxContainer/DevConsole"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
text = "Wyłączony"
script = ExtResource("3_uq6y0")

[node name="Dostępność" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dostępność"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -145.0
offset_right = 300.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReducedMotion" type="VBoxContainer" parent="TabContainer/Dostępność/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Dostępność/VBoxContainer/ReducedMotion"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Redukcja ruchu:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button" type="Button" parent="TabContainer/Dostępność/VBoxContainer/ReducedMotion"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
text = "Wyłączony"
script = ExtResource("3_uq6y0")

[node name="LabelDesc" type="Label" parent="TabContainer/Dostępność/VBoxContainer/ReducedMotion"]
layout_mode = 2
text = "Podmienia niektóre grafiki lub wyłącza animacje aby wizualnie
zredukować ruch na ekranie"
label_settings = SubResource("LabelSettings_rskjs")
horizontal_alignment = 1

[node name="EasierFont" type="VBoxContainer" parent="TabContainer/Dostępność/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Dostępność/VBoxContainer/EasierFont"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Prostsza czcionka:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button" type="Button" parent="TabContainer/Dostępność/VBoxContainer/EasierFont"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
text = "Wyłączony"
script = ExtResource("3_uq6y0")

[node name="LabelDesc" type="Label" parent="TabContainer/Dostępność/VBoxContainer/EasierFont"]
layout_mode = 2
text = "Zastępuje domyślną czcionkę gry na OpenDyslexia"
label_settings = SubResource("LabelSettings_rskjs")
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="TabContainer/Dostępność/VBoxContainer/EasierFont"]
visible = false
layout_mode = 2
text = "Zmiana tego ustawienia wymaga restartu gry"
label_settings = SubResource("LabelSettings_44h5e")
horizontal_alignment = 1

[node name="Zgłoś błąd" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -50.0
offset_right = 76.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="BackButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Zapisz i wróć"

[node name="SFXTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5hsqm")
bus = &"SFX"

[connection signal="tab_clicked" from="TabContainer" to="." method="_on_report_bug_pressed"]
[connection signal="toggled" from="TabContainer/Grafika/VBoxContainer/Screen/FullScreenButton" to="." method="_on_full_screen_button_toggled"]
[connection signal="value_changed" from="TabContainer/Grafika/VBoxContainer/UIScaling/Container/TextureRect/UIScalingSlider" to="." method="_on_ui_scaling_slider_value_changed"]
[connection signal="drag_ended" from="TabContainer/Audio/VBoxContainer/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="drag_ended" from="TabContainer/Audio/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Tap/TextureButton" to="." method="_on_tch_tap_toggled"]
[connection signal="toggled" from="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/Swipe/TextureButton" to="." method="_on_tch_swipe_toggled"]
[connection signal="toggled" from="TabContainer/Rozgrywka/VBoxContainer/TouchScreenControls/HBoxContainer/VirtualButtons/TextureButton" to="." method="_on_tch_vbuttons_toggled"]
[connection signal="pressed" from="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Up/KBUpButton" to="." method="_on_kb_up_button_pressed"]
[connection signal="pressed" from="TabContainer/Rozgrywka/VBoxContainer/Keybindings/HBoxContainer/Keyboard/Down/KBDownButton" to="." method="_on_kb_down_button_pressed"]
[connection signal="pressed" from="TabContainer/Rozgrywka/VBoxContainer/DevConsole/DevConsoleButton" to="." method="_on_dev_console_button_pressed"]
[connection signal="toggled" from="TabContainer/Dostępność/VBoxContainer/ReducedMotion/Button" to="." method="_on_reduced_motion_button_toggled"]
[connection signal="toggled" from="TabContainer/Dostępność/VBoxContainer/EasierFont/Button" to="." method="_on_easier_font_button_toggled"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
